Bug 119561 - Assertion failed when double-clicking in a table in the attached ODT
Summary: Assertion failed when double-clicking in a table in the attached ODT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:6.2.0
Keywords: haveBacktrace
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2018-08-28 10:42 UTC by Aron Budea
Modified: 2018-11-24 23:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Sample ODT (9.22 KB, application/vnd.oasis.opendocument.text)
2018-08-28 10:42 UTC, Aron Budea
Details
gdb backtrace (25.38 KB, text/x-log)
2018-10-09 13:29 UTC, Xisco Faulí
Details
screencast (947.76 KB, video/mp4)
2018-10-09 21:22 UTC, Xisco Faulí
Details
bt with debug symbols (9.80 KB, text/plain)
2018-10-10 18:41 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2018-08-28 10:42:31 UTC
Created attachment 144501 [details]
Sample ODT

The attached document is slightly tricky: the two rows it contains belong to two single-row tables. It also containes a user field in the middle of the second row.

- Click in the cell with the field.
- Double-click in the middle of the cell above where the ↓ is displayed (this only happens because the rows are separate tables).

=> Assertion failed!
Expression: !IsTableMode()

Here:
https://opengrok.libreoffice.org/xref/core/sw/source/core/crsr/crsrsh.cxx#126

Observed using a 6.2 master build (26b40fcfc67480e75bd9959b0c5cb9db10fdf6a1) / Windows 7.
Comment 1 Aron Budea 2018-08-28 10:43:27 UTC
As with other assertion failures, a debug build is required to reproduce this.
Comment 2 Xisco Faulí 2018-10-09 13:27:00 UTC
Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: efe119aaa50e9f532b3fac1ef153469c80f24b80
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF-dbg, Branch:master, Time: 2018-09-10_00:34:47
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 3 Xisco Faulí 2018-10-09 13:29:31 UTC
Created attachment 145522 [details]
gdb backtrace
Comment 4 Julien Nabet 2018-10-09 20:32:38 UTC
On pc Debian x86-64 with master sources updated today + enable-dbgutil, I don't reproduce this with gtk3, gen or gtk rendering.
Just for info, I don't see any ↓ symbol.
Comment 5 Xisco Faulí 2018-10-09 21:22:56 UTC
Created attachment 145543 [details]
screencast
Comment 6 Julien Nabet 2018-10-10 18:41:56 UTC
Created attachment 145578 [details]
bt with debug symbols

Thank you Xisco for the screencast, I was expecting a specific character whereas it was just the mouse pointer.
Comment 7 Julien Nabet 2018-10-10 19:00:36 UTC
I've submitted this patch for master on gerrit:
https://gerrit.libreoffice.org/#/c/61632/
Let's wait for the review.
Comment 8 Commit Notification 2018-10-24 12:33:02 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f51005bc969c9296fa3e64d82c13f84fdfb90fe4

tdf#119561: fix assert when double click field in a table

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Julien Nabet 2018-11-24 13:46:00 UTC
Let's put this one to FIXED since no feedback.

Don't hesitate to reopen this tracker if you still reproduce this.
Comment 10 Aron Budea 2018-11-24 23:08:36 UTC
I get no assert anymore with a recent local build. Thank you for the fix, Julien!