tdf#119561: fix assert when double click field in a table

by calling ClearMark so we clean table cursor and related stuff
before creating a new cursor for field edition
See https://bugs.documentfoundation.org/attachment.cgi?id=145578

Change-Id: I3a67fc5704d7a565f76e486bb12e4012e3336062